# yassa_bio

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
scripts/: dump_repo.sh
src/yassa_bio/config/: file.py  map.py  plate.py  standard.py  well.py
src/yassa_bio/config/elisa/: analysis.py  data.py  summary.py
src/yassa_bio/core/: enum.py  model.py  registry.py  typing.py
src/yassa_bio/evaluation/: context.py  run.py
src/yassa_bio/io/: reader.py  utils.py
src/yassa_bio/pipeline/: base.py  composite.py  engine.py
src/yassa_bio/schema/: map.py  plate.py
src/yassa_bio/schema/analysis/: fit.py  (+8 more)
src/yassa_bio/utils/: standard.py
tests/: test_file.py  test_file_ref.py  test_hello_world.py  test_map.py  test_model.py  test_models.py  test_plate.py  test_standard.py  test_typing.py  test_well.py
tests/core/: test_enum.py  test_model.py  test_registry.py  test_typing.py
tests/data/: README.md  plate_reader_data.csv  plate_reader_data.xlsx
tests/evaluation/: test_context.py
tests/evaluation/acceptance/: test_dispatcher.py  test_router.py
tests/evaluation/analysis/: test_fit.py  test_preprocess.py
tests/io/: test_reader.py  test_utils.py
tests/pipeline/: test_base.py  test_composite.py  test_engine.py
tests/schema/acceptance/: test_analytical.py  test_pattern.py  test_validation.py
tests/schema/analysis/: test_config.py  test_fit.py  test_preprocess.py  test_preprocessing.py
tests/schema/layout/: test_batch.py  test_file.py  test_plate.py  test_standard.py  test_well.py
tests/utils/: test_standard.py
(+124 files in other folders)
