[project]
name = "yassa-bio"
version = "0.1.0"
description = "Open-source engine for ELISA & other ligand-binding assay analysis, validation and QC."
authors = [
    {name = "Andrew Ruba",email = "ruba.andrew@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
]

[tool.poetry]
packages = [{include = "yassa_bio", from = "src"}]

[tool.ruff.lint]
select = ["E", "F"]


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.12.1"
black = "^25.1.0"
mypy = "^1.16.1"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
